simple-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-service
  template:
    metadata:
      labels:
        app: simple-service
    spec:
      containers:
        - name: simple-service
          image: local-registry:5000/simple-service:v1
          ports:
            - containerPort: 8111
          # resources:
          #   requests:
          #     cpu: "1"
          #   limits:
          #     cpu: "1"
          #stress-ng --cpu 2 --cpu-load 80 --timeout 180s
