simple-service-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  selector:
    app: simple-service
  ports:
    - protocol: TCP
      port: 8111
      targetPort: 8111
