ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-service
                port:
                  number: 8111
